--- a/homeassistant/components/enphase_envoy/translations/fr.json
+++ b/homeassistant/components/enphase_envoy/translations/fr.json
@@ -12,9 +12,9 @@
         "step": {
             "user": {
                 "data": {
-                    "host": "Hote",
-                    "password": "Mot de passe",
-                    "username": "Nom d'utilisateur"
+                    "api_key": "Cl\u00e9 d'API",
+                    "name": "Le nom de cette installation",
+                    "site_id": "L'identifiant de site Enphase"
                 }
             }
         }
